--- a/templates/home.html
+++ b/templates/home.html
@@ -2,7 +2,7 @@
 
 {% block body %}
     <div class="jumbotron text-center">
-        <h1>Welcome To FlaskApp</h1>
-        <p class="lead">This application is built on the Python Flask framework and is the focus for the "Python Flask From Scratch" YouTube series</p>
+        <h1>Welcome to the BankPy App</h1>
+        <p class="lead">This application is built to analyze bank transactions and creating records for them.</p>
     </div>
 {% endblock %}
